--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,3 @@
-jobs:
-  include:
-    - stage: test
-      matrix:
-        include:
-          - language: python
-            python: 3.7
-            before_script:
-              - cd ./components/pickle-iris-classifier01/tests
-            script:
-              - python -m unittest -v testModel
-            after_script:
-              - cd ../../../
-notifications:
+sudo : required
+before_install :
+ - tar -zcvf newrelic.tar.gz ./
